--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  youtube_player_flutter: ^9.0.1  
 
 
   # The following adds the Cupertino Icons font to your application.
